--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-  <!-- Your code here -->
-
+  <img src="soup.jpg">
+  <img src="taco.jpg" alt="food!">
+  <img src="pizza.jpg" alt="itailian" title="pizza">
 </body>
 </html>
